--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,29 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+
+p{
+  color: black;
+}
+h1,h2,h4,h4,h5{
+  color: black;
+}
+.app-header, .app-footer {
+  background: rgb(85,187,176);
+  background: linear-gradient(90deg, rgba(85,187,176,1) 20%, rgba(110,221,169,1) 40%, rgba(121,216,120,1) 100%);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.details-section {
+  padding: 1rem 1.5rem;
+  background-color: rgb(227, 232, 237);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.map-container {
+  height: 67vh;
+  max-height: 100%;
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.loading-spiner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
 }
